Fix content overflowing section

--- a/style.css
+++ b/style.css
@@ -146,9 +146,9 @@ a:hover {
 /* Sections */
 section {
     padding-top: 4vh;
-    height: 100vh;
+    min-height: 100vh;
     box-sizing: border-box;
-    min-height: fit-content;
+    height: fit-content;
 }
 
 .title {
